second commit from CR ubuntu

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -15,7 +15,7 @@
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
-#local_tmp      = ~/.ansible/tmp
+local_tmp       = /tmp/.ansible-${admin}/tmp
 #plugin_filters_cfg = /etc/ansible/plugin_filters.yml
 #forks          = 5
 #poll_interval  = 15
@@ -100,7 +100,7 @@
 #sudo_flags = -H -S -n
 
 # SSH timeout
-#timeout = 10
+timeout = 10
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
@@ -348,7 +348,7 @@
 # uncomment this line to cause the paramiko connection plugin to not record new host
 # keys encountered.  Increases performance on new host additions.  Setting works independently of the
 # host key checking setting above.
-#record_host_keys=False
+record_host_keys=False
 
 # by default, Ansible requests a pseudo-terminal for commands executed under sudo. Uncomment this
 # line to disable this behaviour.
@@ -358,14 +358,14 @@
 # authenticate to remote devices.  This is a problem for some network devices
 # that close the connection after a key failure.  Uncomment this line to
 # disable the Paramiko look for keys function
-#look_for_keys = False
+look_for_keys = False
 
 # When using persistent connections with Paramiko, the connection runs in a
 # background process.  If the host doesn't already have a valid SSH key, by
 # default Ansible will prompt to add the host key.  This will cause connections
 # running in background processes to fail.  Uncomment this line to have
 # Paramiko automatically add host keys.
-#host_key_auto_add = True
+host_key_auto_add = True
 
 [ssh_connection]
 
@@ -440,7 +440,7 @@
 # or RPC call before timing out. The value for the command timeout must
 # be less than the value of the persistent connection idle timeout (connect_timeout)
 # The default value is 30 second.
-#command_timeout = 30
+command_timeout = 150
 
 [accelerate]
 #accelerate_port = 5099
