--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-=======
-
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 # config file for ansible -- https://ansible.com/
 # ===============================================
 
@@ -19,11 +15,8 @@
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
-<<<<<<< HEAD
-local_tmp       = /tmp/.ansible-${admin}/tmp
-=======
+#local_tmp       = /tmp/.ansible-${admin}/tmp
 #local_tmp      = ~/.ansible/tmp
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 #plugin_filters_cfg = /etc/ansible/plugin_filters.yml
 #forks          = 5
 #poll_interval  = 15
@@ -63,7 +56,6 @@ local_tmp       = /tmp/.ansible-${admin}/tmp
 # environment.
 # gather_timeout = 10
 
-<<<<<<< HEAD
 # Ansible facts are available inside the ansible_facts.* dictionary
 # namespace. This setting maintains the behaviour which was the default prior
 # to 2.5, duplicating these variables into the main namespace, each with a
@@ -73,23 +65,18 @@ local_tmp       = /tmp/.ansible-${admin}/tmp
 # ansible_facts.
 # inject_facts_as_vars = True
 
-=======
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 # additional paths to search for roles in, colon separated
 #roles_path    = /etc/ansible/roles
 
 # uncomment this to disable SSH key host checking
-<<<<<<< HEAD
 #host_key_checking = False
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 #stdout_callback = skippy
-=======
 host_key_checking = False
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 stdout_callback = debug
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 
 
 ## Ansible ships with some plugins that require whitelisting,
@@ -118,11 +105,7 @@ stdout_callback = debug
 #sudo_flags = -H -S -n
 
 # SSH timeout
-<<<<<<< HEAD
-timeout = 10
-=======
 #timeout = 10
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
@@ -212,10 +195,7 @@ timeout = 10
 
 # set plugin path directories here, separate with colons
 #action_plugins     = /usr/share/ansible/plugins/action
-<<<<<<< HEAD
 #become_plugins     = /usr/share/ansible/plugins/become
-=======
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 #cache_plugins      = /usr/share/ansible/plugins/cache
 #callback_plugins   = /usr/share/ansible/plugins/callback
 #connection_plugins = /usr/share/ansible/plugins/connection
@@ -235,11 +215,8 @@ timeout = 10
 # by default callbacks are not loaded for /bin/ansible, enable this if you
 # want, for example, a notification or logging callback to also apply to
 # /bin/ansible runs
-<<<<<<< HEAD
 #bin_ansible_callbacks = False
-=======
 bin_ansible_callbacks = True
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 
 
 # don't like cows?  that's unfortunate.
@@ -271,7 +248,6 @@ bin_ansible_callbacks = True
 # current IP information.
 #fact_caching = memory
 
-<<<<<<< HEAD
 #This option tells Ansible where to cache facts. The value is plugin dependent.
 #For the jsonfile plugin, it should be a path to a local directory.
 #For the redis plugin, the value is a host:port:database triplet: fact_caching_connection = localhost:6379:0
@@ -283,12 +259,10 @@ bin_ansible_callbacks = True
 # retry files
 # When a playbook fails a .retry file can be created that will be placed in ~/
 # You can enable this feature by setting retry_files_enabled to True
-=======
 
 # retry files
 # When a playbook fails by default a .retry file will be created in ~/
 # You can disable this feature by setting retry_files_enabled to False
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 # and you can change the location of the files by setting retry_files_save_path
 
 #retry_files_enabled = False
@@ -361,11 +335,8 @@ bin_ansible_callbacks = True
 #any_errors_fatal = False
 
 [inventory]
-<<<<<<< HEAD
 # enable inventory plugins, default: 'host_list', 'script', 'auto', 'yaml', 'ini', 'toml'
-=======
 # enable inventory plugins, default: 'host_list', 'script', 'yaml', 'ini'
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 #enable_plugins = host_list, virtualbox, yaml, constructed
 
 # ignore these extensions when parsing a directory as inventory source
@@ -388,11 +359,8 @@ bin_ansible_callbacks = True
 # uncomment this line to cause the paramiko connection plugin to not record new host
 # keys encountered.  Increases performance on new host additions.  Setting works independently of the
 # host key checking setting above.
-<<<<<<< HEAD
-record_host_keys=False
-=======
 #record_host_keys=False
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
+#record_host_keys=False
 
 # by default, Ansible requests a pseudo-terminal for commands executed under sudo. Uncomment this
 # line to disable this behaviour.
@@ -402,22 +370,14 @@ record_host_keys=False
 # authenticate to remote devices.  This is a problem for some network devices
 # that close the connection after a key failure.  Uncomment this line to
 # disable the Paramiko look for keys function
-<<<<<<< HEAD
-look_for_keys = False
-=======
 #look_for_keys = False
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 
 # When using persistent connections with Paramiko, the connection runs in a
 # background process.  If the host doesn't already have a valid SSH key, by
 # default Ansible will prompt to add the host key.  This will cause connections
 # running in background processes to fail.  Uncomment this line to have
 # Paramiko automatically add host keys.
-<<<<<<< HEAD
-host_key_auto_add = True
-=======
 #host_key_auto_add = True
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 
 [ssh_connection]
 
@@ -435,11 +395,8 @@ host_key_auto_add = True
 
 # The path to use for the ControlPath sockets. This defaults to a hashed string of the hostname,
 # port and username (empty string in the config). The hash mitigates a common problem users
-<<<<<<< HEAD
 # found with long hostnames and the conventional %(directory)s/ansible-ssh-%%h-%%p-%%r format.
-=======
 # found with long hostames and the conventional %(directory)s/ansible-ssh-%%h-%%p-%%r format.
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 # In those cases, a "too long for Unix domain socket" ssh error would occur.
 #
 # Example:
@@ -477,11 +434,8 @@ host_key_auto_add = True
 
 # The -tt argument is passed to ssh when pipelining is not enabled because sudo 
 # requires a tty by default. 
-<<<<<<< HEAD
 #usetty = True
-=======
 #use_tty = True
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 
 # Number of times to retry an SSH connection to a host, in case of UNREACHABLE.
 # For each retry attempt, there is an exponential backoff,
@@ -494,9 +448,6 @@ host_key_auto_add = True
 # how long the persistent connection will remain idle before it is destroyed.
 # If the connection doesn't receive a request before the timeout value
 # expires, the connection is shutdown. The default value is 30 seconds.
-<<<<<<< HEAD
-#connect_timeout = 30
-=======
 connect_timeout = 300
 
 # Configures the persistent connection retry timeout.  This value configures the
@@ -505,18 +456,13 @@ connect_timeout = 300
 # ssh timeout (timeout) and less than persistent connection idle timeout (connect_timeout).
 # The default value is 15 seconds.
 #connect_retry_timeout = 15
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 
 # The command timeout value defines the amount of time to wait for a command
 # or RPC call before timing out. The value for the command timeout must
 # be less than the value of the persistent connection idle timeout (connect_timeout)
-<<<<<<< HEAD
 # The default value is 30 second.
-command_timeout = 150
-=======
 # The default value is 10 second.
 command_timeout = 250
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 
 [accelerate]
 #accelerate_port = 5099
@@ -537,11 +483,8 @@ command_timeout = 250
 # file systems that require special treatment when dealing with security context
 # the default behaviour that copies the existing context or uses the user default
 # needs to be changed to use the file system dependent context.
-<<<<<<< HEAD
 #special_context_filesystems=nfs,vboxsf,fuse,ramfs,9p,vfat
-=======
 #special_context_filesystems=nfs,vboxsf,fuse,ramfs,9p
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
 
 # Set this to yes to allow libvirt_lxc connections to work without SELinux.
 #libvirt_lxc_noseclabel = yes
@@ -568,8 +511,3 @@ command_timeout = 250
 
 # Set how many context lines to show in diff
 # context = 3
-<<<<<<< HEAD
-=======
-
-
->>>>>>> 950263eece90532747e33404f422d629f8448ce3
