--- a/group_vars/n9k-vnichange.yml
+++ b/group_vars/n9k-vnichange.yml
@@ -1,8 +1,10 @@
 ---
 ansible_connection: network_cli
 ansible_network_os: nxos
-ansible_user: "svc.dcmetroscript"
-ansible_password: "n6s.G7BDh7AaoK7!..@"
+#ansible_user: "svc.dcmetroscript"
+#ansible_password: "n6s.G7BDh7AaoK7!..@"
+ansible_user: "admin"
+ansible_password: "VMware1!"
 
 VNI:
   - {oldvni: 1003101, id: 3101, name: sjc05-mgmt, vni: 1001505, multicast: 239.0.0.12}
@@ -23,8 +25,8 @@ VNI:
   - {oldvni: 1003474, id: 3474, name: sjc05-staging-environment, vni: 1001909, multicast: 239.0.0.22}
   - {oldvni: 1000012, id: 12, name: eat1-dmz-prod-protable, vni: 1002201, multicast: 239.0.1.1}
   - {oldvni: 1000014, id: 14, name: eat1-dmz-stage-new, vni: 1002202, multicast: 239.0.1.1}
-  - {oldvni: 1003411, id: 3411, name: sjc05-prod-greemplum-server, vni: 1002214, multicast: 239.0.1.3}
-  - {oldvni: 1003421, id: 3421, name: sjc05-prod-greemplum-server, vni: 1002215, multicast: 239.0.1.3}
-  - {oldvni: 1003434, id: 3434, name: sjc05-prod-greemplum-server, vni: 1002216, multicast: 239.0.1.3}
-  - {oldvni: 1003438, id: 3438, name: sjc05-prod-greemplum-server, vni: 1002217, multicast: 239.0.1.3}
+  - {oldvni: 1003411, id: 3411, name: sjc05-dmz-stage-tier1-vplex, vni: 1002214, multicast: 239.0.1.3}
+  - {oldvni: 1003421, id: 3421, name: sjc05-dmz-tier1-prod, vni: 1002215, multicast: 239.0.1.3}
+  - {oldvni: 1003434, id: 3434, name: sjc05-dmz-tier2-staging, vni: 1002216, multicast: 239.0.1.3}
+  - {oldvni: 1003438, id: 3438, name: sjc05-dmz-tier2-prod, vni: 1002217, multicast: 239.0.1.3}
 ...
