--- a/n9k-vnichange.yml
+++ b/n9k-vnichange.yml
@@ -3,6 +3,10 @@
   gather_facts: false
 
   tasks:
+  - name: Create checkpoint
+    nxos_command:
+      commands:
+       - checkpoint Jun20
   - name: Remove VNI on the NVE Interface
     nxos_vxlan_vtep_vni:
       interface: nve1
